# photo_folio

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  LICENSE  PRD.md  README.md  biome.json  pyproject.toml
.claude/commands/: feature-create.md  feature-done.md  feature-implement.md  feature-list.md  feature-plan.md  feature-start.md  implement.md
.specify/memory/: constitution.md  note.md  prd.md
.specify/templates/: plan-template.md
docs/: gallery-builder.md  layout-masonry.md  layout-organic.md  lazy-loading.md  service-worker.md  web-architecture.md
features/: README.md  _template.md
features/backlog/: 001-scrolltopbutton-effect.md  002-app-effect-subscriptions.md  003-loadedimages-state.md  004-gallery-store-runes.md  005-gallery-random-order.md  006-masonry-random-scale.md
features/done/: 001-scrolltopbutton-effect.md  002-app-effect-subscriptions.md  003-loadedimages-state.md  004-gallery-store-runes.md  006-masonry-random-scale.md
specs/005-gallery-random-order/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-gallery-random-order/contracts/: README.md
src/gallery_builder/: __init__.py  process.py
src/photo_tools/: process.py
web/: biome.json  config.json  index.html  package-lock.json  package.json  script.js  styles.css  sw.js  vite.config.js
web/public/: config.json  site.json  sw.js  theme.json
web/src/: App.svelte  main.js
web/src/lib/actions/: lazyload.js
web/src/lib/components/: Gallery.svelte  GallerySelector.svelte  Header.svelte  Lightbox.svelte  Overlay.svelte  Panel.svelte  Photo.svelte  ScrollTopButton.svelte  Splash.svelte
web/src/lib/stores/: breakpoint.js  config.js  gallery.js  gallery.svelte.js  loadedImages.js  loadedImages.svelte.js
web/src/lib/styles/: base.css  global.css  variables.css
web/src/lib/styles/components/: gallery.css  header.css  lightbox.css  panel.css  splash.css
web/src/lib/styles/layouts/: masonry.css  organic.css
web/src/lib/utils/: positions.js  shuffle.js
web/src/lib/utils/layouts/: index.js  masonry.js  organic.js
