[project]
name = "gallery-builder"
version = "1.0.0"
description = "Image processing tools for photography portfolio"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "poethepoet>=0.24.0",
]

[project.scripts]
build-gallery = "gallery_builder.process:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gallery_builder"]

[tool.poe.tasks]
assets = "build-gallery"
"assets:force" = "build-gallery --force"
serve = { shell = "cd web && npm run dev" }
build = { shell = "cd web && npm run build" }
preview = { shell = "cd web && npm run preview" }
dev = ["assets", "serve"]
