[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gallery-builder"
version = "1.0.0"
description = "Gallery builder tool for photo_folio website"
readme = "README.md"
license = "MIT"
authors = [
    { name = "i3oc9i", email = "i3oc9i@icloud.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Graphics :: Viewers",
]
dependencies = [
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "poethepoet>=0.24.0",
]

[project.urls]
Repository = "https://github.com/i3oc9i/photo_folio"

[project.scripts]
build-gallery = "gallery_builder.process:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gallery_builder"]

[tool.poe.tasks]
# Init (run 'uv sync --extra dev' first to bootstrap poe)
init = { shell = "cd web && npm install", help = "Install Node dependencies" }

# Dev
dev = { sequence = ["dev:assets", "dev:serve"], help = "Build assets and start dev server" }
"dev:assets" = { cmd = "build-gallery -j 8", help = "Build gallery assets from source photos" }
"dev:assets:force" = { cmd = "build-gallery --force -j 8", help = "Force rebuild all assets" }
"dev:serve" = { shell = "cd web && npm run dev", help = "Start Vite dev server" }
"dev:preview" = { shell = "cd web && npm run preview", help = "Preview production build" }
"dev:build" = { shell = "cd web && npm run build", help = "Build for production" }

# Clean
clean = { shell = "rm -rf web/public/assets/*", help = "Remove generated gallery assets" }
"clean:dist" = { shell = "rm -rf web/dist", help = "Remove production build output" }
"clean:all" = { shell = "rm -rf web/public/assets/* web/dist web/node_modules && find . -type d -name __pycache__ -exec rm -rf {} + 2>/dev/null || true", help = "Remove all generated files and caches" }
"clean:reset" = { shell = "rm -rf web/public/assets/* web/dist web/node_modules .venv && find . -type d -name __pycache__ -exec rm -rf {} + 2>/dev/null || true", help = "Full reset: remove everything including .venv" }
